# evdsptc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: evdsptc.c  evdsptc.h
test/: .gitignore  CMakeLists.txt  Makefile  build_cpputest.bat  build_cpputest.sh  build_cpputest_mingw.bat
test/src/: evdsptc_test.cpp  example.cpp
